--- a/wp-content/themes/affstream/blocks/media-intro/style.css
+++ b/wp-content/themes/affstream/blocks/media-intro/style.css
@@ -9,6 +9,7 @@
   align-items: center;
   gap: 45px;
   max-width: 1200px;
+  padding: 0 10px;
 }
 @media (max-width: 1599px) {
   .intro-media-section .container {
