--- a/wp-content/themes/affstream/blocks/recent-posts/style.css
+++ b/wp-content/themes/affstream/blocks/recent-posts/style.css
@@ -10,6 +10,7 @@
   max-width: 1600px;
   margin: 0 auto 30px;
   width: 100%;
+  padding: 0 10px;
 }
 @media (max-width: 1599px) {
   .media-recent-posts .recent-posts-title {
@@ -65,6 +66,7 @@
   display: flex;
   gap: 75px;
   justify-content: space-between;
+  padding: 0 10px;
 }
 @media (max-width: 1599px) {
   .media-recent-posts .container {
